--- a/Baap-Er-Bank/index.html
+++ b/Baap-Er-Bank/index.html
@@ -15,12 +15,12 @@
         <section class="bg-cyan-400 w-9/12 mx-auto mt-12 p-8">
             <h3 class="text-3xl mb-4 font-medium">Please Login</h3>
             <div>
-                <input class="w-9/12 block mb-2 px-3" type="email" placeholder="Your email address">
-                <input class="w-9/12 block mb-2 px-3 type="password" placeholder="your password">
-                <button class="bg-sky-600 mt-2 px-8 py-2 text-white font-medium rounded-2xl ">Submit</button>
+                <input class="w-9/12 block mb-2 px-3" id="user-email" type="email" placeholder="Your email address">
+                <input class="w-9/12 block mb-2 px-3" id="user-password" type="password" placeholder="your password">
+                <button class="bg-sky-600 hover:bg-blue-800 mt-2 px-8 py-2 text-white font-medium rounded-2xl " id="btn-submit">Submit</button>
             </div>
         </section>
     </main>
-    
+    <script src="login.js"></script>
 </body>
 </html>
