--- a/Baap-Er-Bank/Bank.html
+++ b/Baap-Er-Bank/Bank.html
@@ -15,15 +15,15 @@
             <div class="grid grid-cols-3 gap-4 w-9/12 mx-auto">
                 <div class="bg-green-400 p-8 rounded-2xl">
                     <h4 class="text-2xl">Deposit</h4>
-                    <h2 class="text-5xl">$<span class="text-cyan-800">00</span></h2>
+                    <h2 class="text-5xl">$<span class="text-cyan-800" id="deposit-total">00</span></h2>
                 </div>
                 <div class="bg-yellow-300 p-8 rounded-2xl">
                     <h4 class="text-2xl">Withdraw</h4>
-                    <h2 class="text-5xl">$<span class="text-red-600">00</span></h2>
+                    <h2 class="text-5xl">$<span class="text-red-600" id="withdraw-total">00</span></h2>
                 </div>
                 <div class="bg-sky-400 p-8 rounded-2xl">
                     <h4 class="text-2xl">Balance</h4>
-                    <h2 class="text-5xl">$<span class="text-purple-50">1240</span></h2>
+                    <h2 class="text-5xl">$<span class="text-purple-50" id="balance-total">1240</span></h2>
                 </div>
             </div>
         </section>
