--- a/Dom-project_YT/1/index.html
+++ b/Dom-project_YT/1/index.html
@@ -12,6 +12,11 @@
 			<h1>
 				Change The Background Color By Clicking The Following Button
 			</h1>
+            <div>
+                <input type="text" value="#0000" id="output">
+                <button class="copy-btn" id="copy-btn">Copy</button>
+            </div>
+
 			<button id="change-btn">Change Color</button>
 		</div>
         <script src="index.js"></script>
